[package]
name = "save-z0r"
version = "0.2.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3"
reqwest = { version = "0.10", features = ["blocking"] }
structopt = "0.3"
